# test-engineering-portfolio

./: README.md  about_the_author  how_to_read_this_portfolio
.github/workflows/: playwright.yml
agents/: jira_requirements_review_agent.md  observability_gaps.md  requirement_extraction.md  risk_analysis.md  test_case_generator.md  test_case_review
case_studies/: defect_prevention.md  testability_first.md
case_studies/jira_ticket_review_agent/: jira_ticket_6688
case_studies/test_case_generator/: jira_ticket_521  jira_ticket_6753
playwright/: conftest.py  pyproject.toml
playwright/pages/: __init__.py  base_page.py  dashboard_page.py  login_page.py
playwright/tests/: test_accessibility.py  test_login.py
playwright/utils/: __init__.py  api_client.py  helpers.py
portfolio/agents/: test_case_risk_traceability.md
portfolio/case_studies/jira_ticket_review_agent/: jira_ticket_6769  jira_ticket_6774
portfolio/case_studies/test_plan_review_agent/: jira_ticket_703
project1_automation/: README
project1_automation/auth/: login.py
project1_automation/config/: settings.py  status_ui_spec_definitions.py
project1_automation/tests/dashboard/: test_dashboard_default_view.py  test_dashboard_dismissed_widget.py  test_dashboard_expandable_card_check.py  test_dashboard_exported_widget.py  test_dashboard_last_ingest.py  test_dashboard_latest_invoice_date_widget.py  test_dashboard_ma_checks.py  test_dashboard_programs.py  test_dashboard_unassigned_widget.py
scaffolding/: conventions.md  test_data_strategies.md
scaffolding/project_template/: .env.example  README.md
(+5 files in other folders)
