[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "playwright-portfolio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-playwright>=0.5",
    "pytest-xdist>=3.5",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "smoke: quick sanity checks (run on every push)",
    "regression: full regression suite (run on every merge)",
    "slow: tests that take > 30 s (excluded from PR checks by default)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pages*", "utils*"]
